# ElrondLoterie

Elrond/: Cargo.toml
Elrond/debug/: Cargo.toml
Elrond/debug/src/: main.rs
Elrond/mandos/: crowdfunding-fund-too-late.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json
Elrond/tests/: crowdfunding_test.rs  mandos_test.rs
Elrond/wasm/: Cargo.toml
Elrond/wasm/src/: lib.rs
