[package]
name = "loterie-wasm"
version = "0.0.1"
authors = [ "you",]
edition = "2018"

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.loterie]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.7.0"
features = [ "wasm-output-mode",]
